v0.3.6 - XX-xxx-2009
 . GeoIP: ipaddress is stored as hexa on the memcache

v0.3.5 - 14-Ago-2009
 . Admin:  Possibility to view/flush the memcache
 . API: Using correct GEO IP DB
 . Users: try/except around DeleteScore with ranking

v0.3.4 - 8-Ago-2009
 . Admin: Option to display games that are not ready
 . API: check for ranking range before update the score
 . API: if error with rankings, display positions normally
 . Web: if error with rankings, display positions normally

v0.3.3 - 14-Jul-2009
 . API: Possibility to delete scores when rankings are enabled
 . API: check the score range before updating it
 . Admin: Easier to list games and developers
 . Examples: updated examples. Don't use usr_playername. Instead use cc_playername
 . EditGame: new games has a default category

v0.3.2 - dd-Jun-2009
 . API: Can't delete scores when rankings are enabled
 . API: Rankings (experimental) added
 . API: update-score supports emtpy cc_playername
 . API: Raise error in abnormal situatino. Log the game name
 . Web: Display Scores: supports Rankings

v0.3.1 - 21-Apr-2009
 . Admin: con edit the "publish" property
 . EditGame: create cc_playername if it doesnt exists when compatibility is enabled
 . Post: Update score is only updated if the score is better than the previous one
 . Scores: if a field is empty, display N/A
 . Updated LICENSE. GNU GPL v3

v0.3.0 - 20-Mar-2009
 . Admin: View developers who want to receive email updates
 . Developer: added 'receive email updates' (False by default)
 . EditScores: Possibility to Delete scores
 . EditGame: Admin can edit games too
 . EditGame: Added 'compatibiliy mode'
 . Faq: added 'Do I need to use cocos2d to use cocos Live?'
 . GameScores: Only show the 1st 5 chars of the device id
 . Help: Added new link to cocos Live forum
 . ListGames: Shows icon game. Has link to "edit scores"
 . Main: 5 games that are ready are taken at random
 . Post: added "update score" using cc_playername + cc_device_id as key